--- a/100du/index.html
+++ b/100du/index.html
@@ -5,6 +5,13 @@
         <title>电子商务网站</title>
         <link href="css/style.css" rel="stylesheet">
         <link href="img/100du.ico" rel="shortcut icon">
+        <script src="js/jquery-1.11.0.min.js"></script>
+        <!--[if IE6]>
+        <script src="js/DD_belatedPNG_0.0.8a.js"></script>
+        <script>
+        DD_belatedPNG.fix('*');
+        </script>
+        <![endif]-->
     </head>
     <body>
         <div id="header" class="gradient">
@@ -24,23 +31,33 @@
         </div>
         <div id="nav">
             <ul class="nav_1">
-                <li><a href=""></a>美食</li>
-                <li><a href=""></a>夜店</li>
-                <li><a href=""></a>购物</li>
-                <li><a href=""></a>文化</li>
-                <li><a href=""></a>休闲</li>
+                <li><a class="bg1" href="">美食</a></li>
+                <li><a class="bg2" href="">夜店</a></li>
+                <li><a class="bg3" href="">购物</a></li>
+                <li><a class="bg4" href="">文化</a></li>
+                <li><a class="bg5" href="">休闲</a></li>
             </ul>
-            <h1></h1>
+            <h1><a href="#"><img src="img/logo.png" alt="100度享乐网"/></a></h1>
             <ul class="nav_2">
-                <li><a href=""></a>烧客空间</li>
-                <li><a href=""></a>知道分子</li>
-                <li><a href=""></a>白吃白拿</li>
-                <li><a href=""></a>烧客论坛</li>
-                <li><a href=""></a>企业俱乐部</li>
+                <li><a class="bg6" href="">烧客空间</a></li>
+                <li><a class="bg7" href="">知道分子</a></li>
+                <li><a class="bg8" href="">白吃白拿</a></li>
+                <li><a class="bg9" href="">烧客论坛</a></li>
+                <li><a class="bg10" href="">企业俱乐部</a></li>
             </ul>
 
         </div>
-        <div id="search" class="gradient"></div>
+        <div id="search" class="gradient">
+            <div class="bar">
+                <ul>
+                    <li class="active">搜店</li>
+                    <li>地址</li>
+                    <li>优惠券</li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+        </div>
         <div class="content clear">
             <div class="main fl">
                 <div class="main_wrap clear">
